Fix integer overflow percentage

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -71,7 +71,7 @@ body {
 
 .tk-gallery.cyclic .items
 {
-	width: 1000000000%;
+	width: 10000%;
 }
 
 .tk-gallery.cyclic .controls
